--- a/Blog/Velocidade de Processamento.qmd
+++ b/Blog/Velocidade de Processamento.qmd
@@ -1,10 +1,9 @@
 ---
 title: "Velocidade de Processamento: R vs Julia vs Python"
 description: |
-   Para quem lida com grandes volumes de dados ou cálculos complexos, conhecer a velocidade de execução das linguagens é fundamental. Neste post, comparamos `R`, `Julia` e `Python` por meio de uma função de Fibonacci, mostrando como a escolha da linguagem pode fazer diferença significativa no tempo de processamento e na produtividade.
+   Para quem lida com grandes volumes de dados ou cálculos complexos, conhecer a velocidade de execução das linguagens é fundamental. Neste post, comparamos `R`, `Julia` e `Python` por meio de uma função de Fibonacci, mostrando como a escolha da linguagem pode fazer diferença no tempo de processamento e na produtividade.
 categories:
-  -  Linguagens de Programação 
-  -  Desempenho Computacional
+  -  Benchmark
 author:
   - name: Gabriel Campovilla da Silva
     affiliation: "Universidade Estadual de Campinas"
@@ -12,7 +11,7 @@ author:
   - name: Nicole Fredericci
     affiliation: "Universidade Estadual de Campinas"
     url: https://github.com/NFredericci
-date: "2025-09-12"
+date: "2025-09-19"
 image: imagens/velo.jpeg
 lang: "pt"
 format:
@@ -20,15 +19,19 @@ format:
     toc: true
     self-contained: false
 draft: false
-engine: knitr
 ---
+
+```{r}
+#| echo: false
+Sys.setenv(JULIA_HOME = "/Users/ctrucios/.juliaup/bin")
+```
+
+
 
 ## Introdução
 
 :::{.justify}
-Em uma linguagem interpretada, o código é lido e executado linha a linha por um interpretador, o que facilita a execução de trechos de código fora do contexto do projeto, mas reduz a velocidade em operações intensivas. Já em linguagens com compilação _Just-In-Time (JIT)_, trechos do código são transformados em linguagem de máquina na hora da execução, permitindo um desempenho próximo a linguagens compiladas.
-
-E quando se procura uma linguagem de programação para análise de dados ou computação científica, a velocidade de processamento pode influenciar bastante a escolha. Neste post, comparamos três linguagens populares — `R`, `Julia` e `Python` — analisando seu desempenho em uma tarefa computacionalmente intensiva.
+Em uma linguagem interpretada, o código é processado linha a linha por um interpretador, o que facilita a execução de testes rápidos, execução de trechos isolados e depuração (mas reduz a velocidade em operações intensivas). Já em linguagens com compilação _Just-In-Time (JIT)_, o interpretador compila trechos do código em linguagem de máquina durante a execução, em vez de interpretar linha a linha o tempo todo, permitindo um desempenho próximo a linguagens compiladas (especialmente em loops e cálculos intensivos). E quando se procura uma linguagem de programação para análise de dados ou computação científica, a velocidade de processamento pode influenciar bastante a escolha. Neste post, comparamos três linguagens populares — `R`, `Julia` e `Python` — analisando seu desempenho em uma tarefa computacionalmente intensiva.
 :::
 
 ## Por que a velocidade difere?
@@ -44,12 +47,12 @@ E quando se procura uma linguagem de programação para análise de dados ou com
 ## Exemplo Prático: Cálculo de Fibonacci
 
 :::{.justify}
-Para ilustrar a diferença de desempenho bruto entre as três linguagens, implementamos uma função recursiva de Fibonacci, propositalmente ineficiente, para testar a velocidade de processamento. O cálculo foi realizado no **Google Colab**, um ambiente padronizado na nuvem, para que as diferenças de hardware não influenciassem os resultados. Para padronizar a comparação, consideramos $n = 40$.  
+Para evidenciar a diferença de desempenho bruto entre as três linguagens, implementamos uma função recursiva de Fibonacci (propositalmente ineficiente), com o objetivo de testar a velocidade de processamento. Os resultados apresentados foram obtidos em um MacBook equipado com Apple M3 Pro e 18 GB de RAM.
 :::
 
 **R**
 
-```{r, eval=FALSE}
+```{r}
 fib <- function(n) {
     if (n <= 1) {
         return(n)
@@ -57,7 +60,27 @@ fib <- function(n) {
         return(fib(n-1) + fib(n-2))
     }
 }
+```
 
+
+
+
+:::: {.columns}
+
+::: {.column width="50%"}
+```{r}
+start <- Sys.time()
+result <- fib(30)
+end <- Sys.time()
+
+print(paste("Resultado:", result))
+print(paste("Tempo R:", end - start))
+```
+:::
+
+
+::: {.column width="50%"}
+```{r}
 start <- Sys.time()
 result <- fib(40)
 end <- Sys.time()
@@ -65,10 +88,16 @@ end <- Sys.time()
 print(paste("Resultado:", result))
 print(paste("Tempo R:", end - start))
 ```
+:::
+::::
+
+
+
+
 
 **Julia**
 
-```{julia, eval=FALSE}
+```{julia}
 function fib(n)
     if n <= 1
         return n
@@ -76,18 +105,43 @@ function fib(n)
         return fib(n-1) + fib(n-2)
     end
 end
+```
 
-start_time = time()
-result = fib(40)
-end_time = time()
+
+:::: {.columns}
+
+::: {.column width="50%"}
+```{julia}
+start_time = time();
+result = fib(30);
+end_time = time();
 
 println("Resultado: $result")
 println("Tempo Julia: $(end_time - start_time) segundos")
 ```
+:::
+
+
+
+::: {.column width="50%"}
+```{julia}
+start_time = time();
+result = fib(40);
+end_time = time();
+
+println("Resultado: $result")
+println("Tempo Julia: $(end_time - start_time) segundos")
+```
+:::
+::::
+
+
+
+
 
 **Python**
 
-```{python, eval=FALSE}
+```{python}
 import time
 
 def fib(n):
@@ -95,7 +149,26 @@ def fib(n):
         return n
     else:
         return fib(n-1) + fib(n-2)
+```
 
+
+
+:::: {.columns}
+
+::: {.column width="50%"}
+```{python}
+start = time.time()
+result = fib(30)
+end = time.time()
+
+print(f"Resultado: {result}")
+print(f"Tempo Python: {end - start:.4f} segundos")
+```
+:::
+
+
+::: {.column width="50%"}
+```{python}
 start = time.time()
 result = fib(40)
 end = time.time()
@@ -103,11 +176,15 @@ end = time.time()
 print(f"Resultado: {result}")
 print(f"Tempo Python: {end - start:.4f} segundos")
 ```
+:::
+::::
+
+
 
 ## Resultados Esperados
 
 :::{.justify}
-Os tempos de execução podem variar de execução para execução, mas em testes típicos para `fib(40)` a média encontrada costuma ser aproximadamente:
+Os tempos de execução podem variar de execução para execução e dependendo do computador sendo utilizado. Para padronizar um pouco os resultados, utilizando a consiguração padrão do Colab e realizamos os testes  para `fib(40)` os valores encontrados foram:
 
 -   **Julia**: 1,45 segundos.
 
