Update umpontoonze.qmd (edit)

--- a/Blog/umpontoonze.qmd
+++ b/Blog/umpontoonze.qmd
@@ -1,7 +1,7 @@
 ---
-title: Julia 1.11.6: Conheça as Melhorias da Última Atualização da Linguagem
-description: O texto apresenta as principais melhorias da Julia 1.11.6, lançada em julho de 2025, destacando otimizações no compilador, sistema de tipos, paralelização e correções de bugs, mantendo compatibilidade com versões anteriores.
-
+title: "Julia 1.11.6 — conheça as melhorias da última atualização"
+description: |
+  Lançada em julho de 2025, a versão `1.11.6` de `Julia` apresenta diversas atualizações, destacando melhorias no compilador, sistema de tipos e paralelização. A versão também inclui correções de bugs e garante a compatibilidade com versões anteriores.
 categories:
   -  Atualizações de Software
   -  Computação Técnica
@@ -9,102 +9,102 @@ author:
   - name: Gabriel Campovilla da Silva
     affiliation: "Universidade Estadual de Campinas"
     url: https://github.com/C4mpovill4
-
-  - name: 
-    affiliation: 
-    url: 
-    orcid: 
-
-date: "2025-08-22"
+  - name: Nicole Fredericci
+    affiliation: "Universidade Estadual de Campinas"
+    url: https://github.com/NFredericci
+date: "2025-10-02"
 image: imagens/umpontoonze.jpeg
 lang: "pt"
 format:
   html:
     toc: true
     self-contained: false
+engine: knitr
 draft: false
-engine: knitrNet
 ---
 
-## Julia 1.11.6: Conheça as Melhorias da Última Atualização da Linguagem
+## Introdução
 
-\
-A linguagem Julia, conhecida por sua performance em computação científica e
-análise de dados, acaba de receber sua última atualização. A versão
-1.11.6 foi lançada em 9 de julho de 2025, trazendo melhorias
-significativas em relação à versão anterior. Neste post, vamos explorar
-as principais mudanças e como elas podem beneficiar seus projetos.
+:::{.justify}
+Conhecida por sua performance em computação científica e análise de dados, a linguagem `Julia` acaba de receber sua última atualização. A versão `1.11.6` foi lançada em 9 de julho de 2025, trazendo melhorias significativas em relação à versão anterior para quem busca desempenho e estabilidade. Neste post, vamos explorar as principais mudanças e como elas impactam positivamente a experiência dos usuários.
+:::
 
-## O Que Há de Novo na Julia 1.11.6?
+## Novidades da Versão
 
+:::{.justify}
 1.  **Otimizações no Compilador**:
 
-    -   Melhorias no tempo de compilação (time-to-first-execution)
+    -   Melhorias no tempo de compilação (*Time-to-First-Execution* — TTFX).
 
-    -   Otimizações específicas para funções matemáticas complexas
+    -   Otimizações específicas para funções matemáticas complexas.
 
-    -   Redução de alocações de memória em operações comuns
+    -   Redução de alocações de memória em operações comuns, tornando a execução do código mais rápida.
 
 2.  **Aprimoramentos no Sistema de Tipos**:
 
-    -   Maior precisão na inferência de tipos
+    -   Maior precisão na inferência de tipos de dados.
 
-    -   Melhor tratamento de tipos union
+    -   Melhor tratamento de tipos `Union` (quando uma variável pode ter mais de um tipo possível).
 
-    -   Correções em corner cases do sistema de tipos
+    -   Correções em *corner cases* do sistema de tipos (onde a lógica do sistema de tipos poderia falhar ou levar a um comportamento inesperado).
 
 3.  **Melhorias na Paralelização**:
 
-    -   Redução da sobrecarga em operações distribuídas
+    -   Redução da sobrecarga em operações distribuídas, que geram um ônus de tempo para gerenciar a comunicação entre os diferentes processos.
 
-    -   Melhor escalabilidade em ambientes multi-core
+    -   Melhor escalabilidade em ambientes *multi-core* (máquinas com muitos núcleos).
 
-    -   Correções no sistema de tarefas (tasks)
+    -   Correções no sistema de tarefas (*Tasks*), que garante que `Julia` execute várias operações simultaneamente.
 
 4.  **Atualizações na Biblioteca Padrão**:
 
-    -   Novas funções matemáticas especializadas
+    -   Novas funções matemáticas especializadas, sem a necessidade de instalar pacotes externos à base de `Julia`.
 
-    -   Melhorias no desempenho de operações com arrays
+    -   Melhorias no desempenho de operações com `arrays` (vetores e matrizes).
 
-    -   Atualizações no sistema de macros
+    -   Atualizações no sistema de macros, ferramentas poderosas para meta-programação e criação de pacotes.
 
 5.  **Correções de Bugs**:
 
-    -   Diversas correções de estabilidade
+    -   Diversas correções de estabilidade para evitar travamentos (*crashes*), erros difíceis de reproduzir ou comportamentos incorretos na execução.
 
-    -   Solução para problemas de memory leak reportados
+    -   Solução para problemas de *memory leak* (vazamento de memória) — falha em liberar a memória *RAM* após o uso, o que afeta a performance em tarefas longas.
 
-    -   Correções em comportamentos inesperados em edge cases
+    -   Correções em comportamentos inesperados em *edge cases* (cenários ou combinações incomuns de código que geram erros).
+:::
 
 ## Compatibilidade e Upgrade
 
-A versão 1.11.6 mantém total compatibilidade com código escrito para
-versões 1.x da linguagem. Os desenvolvedores podem atualizar com
-segurança, aproveitando as melhorias de performance sem preocupações com
-quebras de compatibilidade.
+:::{.justify}
+Uma das maiores vantagens da versão `1.11.6` é a sua compatibilidade total com todo o código escrito para as versões `1.x` da linguagem. Desenvolvedores podem realizar o upgrade com segurança, aproveitando as melhorias de performance sem se preocupar com quebras de código devido à incompatibilidade. Quanto à atualização, os caminhos disponíveis estão listados abaixo e a escolha do método fica totalmente a cargo do usuário.
 
-**Como atualizar**:
+**Via Juliaup:**
 
-    -   Windows/Mac: Baixe a nova versão do site e instale por cima
+Para atualizar `Julia`, abra o Terminal do seu sistema operacional e execute `juliaup update`. O acesso ao Terminal é diferente para cada sistema:
 
-    -   Linux: Use o gerenciador de pacotes da sua distribuição
-```{julia}
-# No terminal do seu SO, não no REPL do Julia
-juliaup update
-```
-link para o site: https://julialang.org/install/
+- Windows: Pesquise *CMD* ou *PowerShell* no menu Iniciar.
+- macOS: Siga o caminho Aplicativos > Utilitários > Terminal.
+- Linux: O padrão de acesso é o comando *Ctrl+Alt+T*.
+
+**Instalação Manual:**
+
+Se você prefere reinstalar `Julia` em sua nova versão, basta seguir os comandos de acordo com seu sistema operacional:
+
+- Windows/macOS: Basta baixar o instalador mais recente no [site oficial](https://julialang.org/install/) e executá-lo. Assim, é possível migrar as configurações de forma segura e sem a necessidade de desinstalar a versão anterior, pois o novo instalador irá sobrepor o antigo.
+
+- Linux (via gerenciador de pacotes): Se você instalou o programa via `apt`, `yum`, `pacman` ou outro gerenciador da sua distribuição, utilize o comando de atualização correspondente no Terminal (como `sudo apt update && sudo apt install julia`, para o gerenciador `apt`).
+:::
 
 ## Conclusão
 
-A Julia 1.11.6
-representa mais um passo na evolução desta linguagem poderosa, com foco
-especial em performance e estabilidade. Se você já utiliza Julia para
-computação científica, análise de dados ou desenvolvimento geral, esta
-atualização traz benefícios que valem a pena aproveitar.
+:::{.justify}
+A versão `1.11.6` de `Julia` representa mais um passo na evolução desta poderosa linguagem, com foco especial em performance e estabilidade. As otimizações no compilador, o sistema de tipos mais preciso e os ganhos na paralelização garantem que a linguagem continue sendo uma das melhores opções para computação científica e análise de dados de alto desempenho.
 
-**Próximos passos**:
-Experimente a nova versão e compartilhe suas impressões nos
-comentários! Você já notou diferenças de performance em seu código?
+**Próximos passos**: Use nosso guia de upgrade para instalar a nova versão de `Julia` e compartilhe suas impressões com a equipe nas [redes sociais](https://www.instagram.com/dozero_aojulia/) do projeto! Você já notou diferenças de performance em seu código?
 
-Para informações mais detalhadas: https://docs.julialang.org/en/v1/NEWS/
+Para informações mais detalhadas sobre cada alteração, consulte as [notas de lançamento oficiais](https://docs.julialang.org/en/v1/NEWS/).
+:::
+
+::: callout-note
+Ferramentas de IA foram utilizadas para correção ortográfica e aprimoramento do texto.
+:::
